src/objects/Skill_User__c.object
<CustomObject>
    <fields>
        <fullName>CREATEDDATE__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>CREATEDDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Blade Matrix</fullName>
                    <isActive>false</isActive>
                    <label>Blade Matrix</label>
                </value>
                <value>
                    <fullName>CCIE</fullName>
                    <isActive>false</isActive>
                    <label>CCIE</label>
                </value>
                <value>
                    <fullName>CCNA</fullName>
                    <isActive>false</isActive>
                    <label>CCNA</label>
                </value>
                <value>
                    <fullName>CCNP</fullName>
                    <isActive>false</isActive>
                    <label>CCNP</label>
                </value>
                <value>
                    <fullName>H3CNA</fullName>
                    <isActive>false</isActive>
                    <label>H3CNA</label>
                </value>
                <value>
                    <fullName>H3CNE</fullName>
                    <isActive>false</isActive>
                    <label>H3CNE</label>
                </value>
                <value>
                    <fullName>H3CSE-ROUTING &amp; SWITCHING</fullName>
                    <isActive>false</isActive>
                    <label>H3CSE-ROUTING &amp; SWITCHING</label>
                </value>
                <value>
                    <fullName>H3CSE-Storage</fullName>
                    <isActive>false</isActive>
                    <label>H3CSE-Storage</label>
                </value>
                <value>
                    <fullName>HP AIS-Network Infrastructure</fullName>
                    <isActive>false</isActive>
                    <label>HP AIS-Network Infrastructure</label>
                </value>
                <value>
                    <fullName>Trained</fullName>
                    <isActive>false</isActive>
                    <label>Trained</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Category__c</fullName>
        <label>Skill Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operating system</fullName>
                </value>
                <value>
                    <fullName>BCS Server</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>ISS server</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>HP Netwroking Product</fullName>
                </value>
                <value>
                    <fullName>ISS Proliant Server</fullName>
                </value>
                <value>
                    <fullName>ISS High Density&amp;Computing Server</fullName>
                </value>
                <value>
                    <fullName>ISS Blade</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Software &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>ISS Rack Server</fullName>
                </value>
                <value>
                    <fullName>ISS Converged System</fullName>
                </value>
                <value>
                    <fullName>MultiVendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Skill</label>
        <referenceTo>ProfileSkill</referenceTo>
        <relationshipLabel>Skill User</relationshipLabel>
        <relationshipName>SkillUserToSkill</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SkillUserToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Skill User</label>
    <nameField>
        <displayFormat>SU-{00000}</displayFormat>
        <label>Skill User No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>